@@ -4,151 +4,95 @@ import com.sun.net.httpserver.*;
 import java.io.*;
 import java.net.InetSocketAddress;
 import java.nio.charset.StandardCharsets;
-import java.text.DecimalFormat;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import server.model.ShoppingCart;
+import server.model.*;
 
 public class MainServer {
-
-    // --- TEMPORARY SESSION & MODEL MANAGEMENT ---
     private static final Map<String, ShoppingCart> SESSIONS = new ConcurrentHashMap<>();
     private static final String SESSION_COOKIE_KEY = "SESSION_ID";
 
     public static void main(String[] args) throws Exception {
+        // Initialize sample products if database is empty
+        if (ProductDatabase.getAllProducts().isEmpty()) {
+            ProductDatabase.addProduct(new Product(
+                    "CHIP01", "Classic Choco Chip", 5.00, 100,
+                    "Rich chocolate bits", "Flour, Sugar, Butter", "Dairy"
+            ));
+            ProductDatabase.addProduct(new Product(
+                    "OAT02", "Oatmeal Raisin", 6.50, 80,
+                    "Chewy oats with raisins", "Oats, Raisins", "None"
+            ));
+            ProductDatabase.addProduct(new Product(
+                    "PB03", "Peanut Butter Delight", 7.00, 60,
+                    "Smooth peanut butter cookies", "Peanut Butter, Flour", "Nuts"
+            ));
+        }
+
         HttpServer server = HttpServer.create(new InetSocketAddress(8080), 0);
 
-        // --- HANDLER REGISTRATION ---
+        // Register handlers
         server.createContext("/api/cart", new CartAPIServlet());
-        server.createContext("/checkout", new CheckoutHandler()); // Handles POST form submission
-
-        // Explicitly register static/dynamic pages to avoid conflicts
-        server.createContext("/checkout.html", new StaticFileHandler());
-        server.createContext("/order_confirmation.html", new StaticFileHandler());
-
+        server.createContext("/checkout", new CheckoutHandler());
         server.createContext("/admin", new AdminHandler());
         server.createContext("/cart.html", new CartPageHandler());
-
-        // Serve all remaining static files from "web" folder (Fallback)
         server.createContext("/", new StaticFileHandler());
 
-        server.setExecutor(null); // default executor
+        server.setExecutor(null);
         server.start();
 
-        System.out.println("Server running at http://localhost:8080/");
+        System.out.println("\n===========================================");
+        System.out.println("🍪 CookieHaven Server is Running!");
+        System.out.println("Shop URL:  http://localhost:8080/order.html");
+        System.out.println("Admin URL: http://localhost:8080/admin");
+        System.out.println("Admin Login: admin / 1234");
+        System.out.println("===========================================\n");
     }
 
-    // Extracted Static Handler - NOW HANDLES DYNAMIC TOTAL FOR CHECKOUT.HTML
-    static class StaticFileHandler implements HttpHandler {
-
-        private static final DecimalFormat DF = new DecimalFormat("0.00");
-
-        @Override
-        public void handle(HttpExchange ex) throws IOException {
-            getSessionId(ex);
-
-            String path = ex.getRequestURI().getPath();
-            if (path.equals("/")) path = "/order.html"; // default page
-
-            // --- PATH CONSTRUCTION ---
-            File file = new File(System.getProperty("user.dir") + File.separator + "web" + path);
-            System.out.println("DEBUG: Trying to load static file at: " + file.getAbsolutePath());
-
-            if (!file.exists() || file.isDirectory()) {
-                String notFound = "404 Not Found. File not found at " + file.getAbsolutePath();
-                ex.sendResponseHeaders(404, notFound.length());
-                ex.getResponseBody().write(notFound.getBytes());
-                ex.close();
-                return;
-            }
-
-            String contentType = getContentType(path);
-            byte[] data = java.nio.file.Files.readAllBytes(file.toPath());
-
-
-            if (path.equals("/checkout.html")) {
-                ShoppingCart cart = MainServer.getCart(ex);
-                double total = cart.calculateTotal();
-
-                String totalString = DF.format(total);
-                String htmlContent = new String(data, StandardCharsets.UTF_8);
-
-                // Replace the TOTAL_PLACEHOLDER (must be updated in checkout.html)
-                String modifiedContent = htmlContent.replace("TOTAL_PLACEHOLDER", totalString);
-
-                data = modifiedContent.getBytes(StandardCharsets.UTF_8);
-                contentType = "text/html";
-            }
-
-
-            ex.getResponseHeaders().add("Content-Type", contentType);
-            ex.sendResponseHeaders(200, data.length);
-            ex.getResponseBody().write(data);
-            ex.close();
+    public static byte[] readFile(String path) throws IOException {
+        File file = new File(path);
+        if (!file.exists()) {
+            throw new FileNotFoundException("File not found: " + path);
         }
+        return Files.readAllBytes(Paths.get(path));
     }
 
-    // --- SESSION UTILITY METHODS --- (No changes)
-    public static ShoppingCart getCart(HttpExchange exchange) {
-        String sessionId = getSessionId(exchange);
-        return SESSIONS.computeIfAbsent(sessionId, k -> new ShoppingCart());
+    public static ShoppingCart getCart(HttpExchange ex) {
+        String sid = getSid(ex);
+        return SESSIONS.computeIfAbsent(sid, k -> new ShoppingCart());
     }
 
-    public static void clearCart(HttpExchange exchange) {
-        String sessionId = getSessionId(exchange);
-        SESSIONS.remove(sessionId);
+    public static void clearCart(HttpExchange ex) {
+        SESSIONS.remove(getSid(ex));
     }
 
-    private static String getSessionId(HttpExchange exchange) {
-        String cookieHeader = exchange.getRequestHeaders().getFirst("Cookie");
-        String sessionId = null;
-
-        if (cookieHeader != null) {
-            String[] cookies = cookieHeader.split("; ");
-            for (String cookie : cookies) {
-                if (cookie.startsWith(SESSION_COOKIE_KEY + "=")) {
-                    sessionId = cookie.substring(SESSION_COOKIE_KEY.length() + 1);
-                    break;
-                }
+    private static String getSid(HttpExchange ex) {
+        String cookie = ex.getRequestHeaders().getFirst("Cookie");
+        if (cookie != null && cookie.contains(SESSION_COOKIE_KEY + "=")) {
+            String[] parts = cookie.split(SESSION_COOKIE_KEY + "=");
+            if (parts.length > 1) {
+                return parts[1].split(";")[0];
             }
         }
-
-        if (sessionId == null || !SESSIONS.containsKey(sessionId)) {
-            sessionId = UUID.randomUUID().toString();
-            exchange.getResponseHeaders().add("Set-Cookie", SESSION_COOKIE_KEY + "=" + sessionId + "; Path=/");
-        }
-
-        return sessionId;
+        String id = UUID.randomUUID().toString();
+        ex.getResponseHeaders().add("Set-Cookie", SESSION_COOKIE_KEY + "=" + id + "; Path=/; HttpOnly");
+        return id;
     }
 
-    // --- EXISTING HANDLERS (AdminHandler, parse, getContentType all remain the same) ---
+    public static Map<String, String> parse(String body) {
+        Map<String, String> map = new HashMap<>();
+        if (body == null || body.isEmpty()) return map;
 
-    static class AdminHandler implements HttpHandler {
-        @Override
-        public void handle(HttpExchange exchange) throws IOException {
-            File file = new File("orderdata.txt");
-
-            if (!file.exists()) {
-                file.createNewFile();
-            }
-            byte[] data = java.nio.file.Files.readAllBytes(file.toPath());
-
-            exchange.sendResponseHeaders(200, data.length);
-            exchange.getResponseBody().write(data);
-            exchange.close();
-        }
-    }
-
-    public static Map<String,String> parse(String body){
-        Map<String,String> map = new HashMap<>();
-        String[] pairs = body.split("&");
-        for (String p : pairs) {
-            String[] kv = p.split("=");
+        for (String pair : body.split("&")) {
+            String[] kv = pair.split("=", 2);
             if (kv.length == 2) {
                 try {
-                    String decodedValue = java.net.URLDecoder.decode(kv[1], StandardCharsets.UTF_8.name());
-                    map.put(kv[0], decodedValue);
-                } catch (UnsupportedEncodingException e) {
+                    String key = java.net.URLDecoder.decode(kv[0], StandardCharsets.UTF_8);
+                    String value = java.net.URLDecoder.decode(kv[1], StandardCharsets.UTF_8);
+                    map.put(key, value);
+                } catch (Exception e) {
                     map.put(kv[0], kv[1]);
                 }
             }
@@ -156,11 +100,40 @@ public class MainServer {
         return map;
     }
 
-    private static String getContentType(String path) {
-        if (path.endsWith(".html")) return "text/html";
-        if (path.endsWith(".css")) return "text/css";
-        if (path.endsWith(".js")) return "application/javascript";
-        if (path.endsWith(".json")) return "application/json";
-        return "text/plain";
+    static class StaticFileHandler implements HttpHandler {
+        @Override
+        public void handle(HttpExchange ex) throws IOException {
+            String path = ex.getRequestURI().getPath();
+            if (path.equals("/")) path = "/order.html";
+
+            try {
+                byte[] data = readFile("web" + path);
+
+                String type = "text/html; charset=UTF-8";
+                if (path.endsWith(".css")) {
+                    type = "text/css; charset=UTF-8";
+                } else if (path.endsWith(".js")) {
+                    type = "application/javascript; charset=UTF-8";
+                } else if (path.endsWith(".jpg") || path.endsWith(".jpeg")) {
+                    type = "image/jpeg";
+                } else if (path.endsWith(".png")) {
+                    type = "image/png";
+                } else if (path.endsWith(".gif")) {
+                    type = "image/gif";
+                }
+
+                ex.getResponseHeaders().add("Content-Type", type);
+                ex.sendResponseHeaders(200, data.length);
+                ex.getResponseBody().write(data);
+
+            } catch (FileNotFoundException e) {
+                String err = "404 Not Found: " + path;
+                byte[] errBytes = err.getBytes(StandardCharsets.UTF_8);
+                ex.getResponseHeaders().add("Content-Type", "text/plain; charset=UTF-8");
+                ex.sendResponseHeaders(404, errBytes.length);
+                ex.getResponseBody().write(errBytes);
+            }
+            ex.close();
+        }
     }
 }
